# ankabot

./: Cargo.toml  README.md
src/: main.rs
tests/: pdf.rs  run.rs  timeout.rs
