[package]
name = "ankabot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
ua_generator = "0.5"

# HTTP client for the fast path
reqwest = { version = "0.11", features = ["gzip", "brotli", "deflate", "rustls-tls"] }

# Headless Chrome for rendered fallback
headless_chrome = "1"
chrono = "0.4"
url = "2"

# Spider with smart HTTP→headless fallback and screenshot support
spider = { version = "2.37.156", features = [
  # HTTP/client quality-of-life
  "headers", "encoding", "cache", "ua_generator",

  # Smart + Chrome
  "smart", "chrome", "chrome_headless_new", "chrome_cpu",
  "chrome_store_page", # to call Page::screenshot()
  # Optional (uncomment as you need them):
   "chrome_intercept",  # speed/traffic shaping under Chrome
   "chrome_stealth",    # lowers bot-signal surface (use responsibly)
] }
